# AssemblyLoader

./: .gitignore  Makefile  PicoVM.sln  makefile.unix  picovm
PicoVM/: CMakeLists.txt  Makefile  PicoVM.vcxproj  PicoVM.vcxproj.filters  main  main.cxx  makefile.unix
PicoVM/CLR/: .clang-format  AppDomain.cxx  AppDomain.hxx  Assembly.hxx  AssemblyData.cxx  AssemblyData.hxx  AssemblyReader.cxx  AssemblyReader.hxx  CLIElementTypes.cxx  CLIElementTypes.hxx  CLIHeader.hxx  CLIMeta.hxx  CLIMetaTableRows.hxx  CLIMetadata.cxx  CLIMetadata.hxx  CLIMetadataTableIndex.cxx  CLIMetadataTableIndex.hxx  CLIMetadataTableRows.cxx  CLIMetadataTableRows.hxx  CLIMethodBody.cxx  CLIMethodBody.hxx  CLISignature.cxx  CLISignature.hxx  CliMetadataTableIndex.cxx  CliMetadataTableIndex.hxx  EnumCasting.hxx  EvaluationStack.cxx  EvaluationStack.hxx  EvaluationStackItem.hxx  ExecutionThread.cxx  ExecutionThread.hxx  Formatting.hxx  HexStr.cxx  HexStr.hxx  ImageDataDirectory.hxx  ImageFileHeader.hxx  ImageNTHeader32.hxx  ImageNTHeader64.hxx  ImageOptionalHeader32.hxx  ImageOptionalHeader64.hxx  (+5 more)
PicoVM/CLR/crossguid/: guid.cxx  guid.hxx
PicoVM/CLR/utf8/: checked.h
PicoVM/appcode/: Arrays.cs  Fib.cs  FibLoop.cs  FibLoop_nolong.cs  Fib_nolong.cs  StringArg.cs
